--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "gh-pages": "^6.3.0",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.3.3"
   }
